--- a/Timetabling06/Views/pending/Edit.cshtml
+++ b/Timetabling06/Views/pending/Edit.cshtml
@@ -143,7 +143,7 @@
                 @Html.ValidationMessageFor(model => model.booked, "", new { @class = "text-danger" })
             </div>
         </div>
-
+        <input type="hidden" name="user" value="@ViewBag.user" />
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Save" class="btn btn-default" />
@@ -153,5 +153,5 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index", new { user = ViewBag.user })
 </div>
