--- a/Timetabling06/Views/pending/Index.cshtml
+++ b/Timetabling06/Views/pending/Index.cshtml
@@ -4,96 +4,102 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Pending Requests</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create", new { user = ViewBag.user })
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.priority)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.day)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.start)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.length)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.weeks)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.type)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.otherReqs)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.date)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.requestLink)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.department.name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.module.moduleTitle)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.round.roundID)
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.priority)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.day)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.start)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.length)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.weeks)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.type)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.otherReqs)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.date)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.requestLink)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.department.name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.module.moduleTitle)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.round.roundID)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.requestID, ViewBag.user }) |
-            @Html.ActionLink("Details", "Details", new { id = item.requestID, ViewBag.user }) |
-            @Html.ActionLink("Delete", "Delete", new { id = item.requestID, ViewBag.user })
-        </td>
-    </tr>
+@using (Html.BeginForm())
+{
+    <p>
+        Search: @Html.TextBox("searchString")
+        <input type="submit" value="Search" />
+        @Html.ActionLink("Reset", "Index", new { user = ViewBag.user })
+    </p>
 }
-
+    <table class="table">
+    <tr>
+        <th>
+            @Html.ActionLink("Round ID", "Sort", new { user = ViewBag.user, pass = "roundid" })
+        </th>
+        <th>
+            @Html.ActionLink("Module Code", "Sort", new { user = ViewBag.user, pass = "part" })
+        </th>
+        <th>
+            @Html.ActionLink("Module Title", "Sort", new { user = ViewBag.user, pass = "module" })
+        </th>
+        <th>
+            @Html.ActionLink("Priority", "Sort", new { user = ViewBag.user, pass = "priority" })
+        </th>
+        <th>
+            @Html.ActionLink("Day", "Sort", new { user = ViewBag.user, pass = "day" })
+        </th>
+        <th>
+            @Html.ActionLink("Start Period", "Sort", new { user = ViewBag.user, pass = "start" })
+        </th>
+        <th>
+            @Html.ActionLink("Length (Hours)", "Sort", new { user = ViewBag.user, pass = "length" })
+        </th>
+        <th>
+            @Html.ActionLink("Weeks", "Sort", new { user = ViewBag.user, pass = "weeks" })
+        </th>
+        <th>
+            @Html.ActionLink("Type", "Sort", new { user = ViewBag.user, pass = "type" })
+        </th>
+        <th>
+            @Html.ActionLink("Date", "Sort", new { user = ViewBag.user, pass = "date" })
+        </th>
+        <th>
+            @Html.ActionLink("Other Requests", "Sort", new { user = ViewBag.user, pass = "other" })
+        </th>
+        <th>
+            @Html.ActionLink("Request Link", "Sort", new { user = ViewBag.user, pass = "link" })
+        </th>
+    </tr>
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.round.roundID)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.moduleCode)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.module.moduleTitle)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.priority)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.day)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.start)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.length)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.weeks)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.type)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.date)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.otherReqs)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.requestLink)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.requestID, ViewBag.user }) |
+                @Html.ActionLink("Details", "Details", new { id = item.requestID, ViewBag.user }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.requestID, ViewBag.user })
+            </td>
+        </tr>
+    }
 </table>
